tests/fixtures/LatestTests/VariableDeclarationTests/errors/deci_to_int.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
var x:int = 5.5

